added elements for accessibility, alt attributes, updated page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>SEO and Online</title>
   </head>
 
   <body>
@@ -21,6 +21,7 @@
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
+          alt="noteback with seo written on it"
         />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -37,6 +38,7 @@
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
+          alt="laptop with 'reputation' on the screen"
         />
         <h2>Online Reputation Management</h2>
         <p>
@@ -51,6 +53,7 @@
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
+          alt="blobs of various social media related symbols"
         />
         <h2>Social Media Marketing</h2>
         <p>
