--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </nav>
     </header>
     <div class="hero"></div>
-    <div class="content">
+    <section class="content">
       <div class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -63,8 +63,8 @@
           your lead generation.
         </p>
       </div>
-    </div>
-    <div class="benefits">
+    </section>
+    <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" />
@@ -89,10 +89,10 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
-    <div class="footer">
+    </aside>
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
