--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="The importance of Search Engine Optimization, Online Reputation Management, and Social Media Marketing"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>SEO and Online</title>
   </head>
@@ -92,7 +97,7 @@
     </aside>
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
-      <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
+      <p>&copy; 2022 Horiseon Social Solution Services, Inc.</p>
     </footer>
   </body>
 </html>
