Updated header styling and fixed issue where clicking Search Engine Optimization would not lead to the relevant content

--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
+    <!-- Added meta tags for description and  -->
     <meta
       name="description"
       content="The importance of Search Engine Optimization, Online Reputation Management, and Social Media Marketing"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>SEO and Online</title>
+    <!-- updated page title to be more SEO friendly -->
+    <title>Horiseon | Social Solution Services, Inc.</title>
   </head>
 
   <body>
+    <!-- Updated to header and nav tags to add semantic value -->
     <header>
-      <h1>Hori<span class="seo">seo</span>n</h1>
+      <!-- Updated to abbr to add semantic value -->
+      <h1>
+        Hori<abbr title="Search Engine Optimization" class="seo">seo</abbr>n
+      </h1>
       <nav>
         <a href="#search-engine-optimization">Search Engine Optimization</a>
         <a href="#online-reputation-management">Online Reputation Management</a>
@@ -21,12 +27,14 @@
       </nav>
     </header>
     <div class="hero"></div>
+    <!-- Updated to section tag to add semantic valuey -->
     <section class="content">
-      <div class="search-engine-optimization">
+      <!-- Added id to div so the header link directs you to the relevant content -->
+      <div class="search-engine-optimization" id="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
-          alt="noteback with seo written on it"
+          alt="notebook with seo written on it"
         />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -69,6 +77,7 @@
         </p>
       </div>
     </section>
+    <!-- Updated to aside tag to add semantic value -->
     <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
@@ -95,6 +104,7 @@
         </p>
       </div>
     </aside>
+    <!-- Updated to footer tag to add semantic value -->
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2022 Horiseon Social Solution Services, Inc.</p>
