--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     <!-- Updated to aside tag to add semantic value -->
     <aside class="benefits">
-      <div class="benefit-lead">
+      <div class="benefit">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" />
         <p>
@@ -87,7 +87,7 @@
           business, bringing customers directly to your website.
         </p>
       </div>
-      <div class="benefit-brand">
+      <div class="benefit">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" />
         <p>
@@ -95,7 +95,7 @@
           the search ranking and visibility for your business.
         </p>
       </div>
-      <div class="benefit-cost">
+      <div class="benefit">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" />
         <p>
