removed redundant classes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Updated to section tag to add semantic valuey -->
     <section class="content">
       <!-- Added id to div so the header link directs you to the relevant content -->
-      <div class="search-engine-optimization" id="search-engine-optimization">
+      <div id="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
@@ -44,10 +44,7 @@
           visibility and find the right customers for your business.
         </p>
       </div>
-      <div
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
+      <div id="online-reputation-management">
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
@@ -62,7 +59,7 @@
           business.
         </p>
       </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      <div id="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
